# conan-researcher

./: .gitignore  docker-compose-prod.yaml  docker-compose.deployment.yaml  docker-compose.yaml
backend/: .env.dist  .gitignore  Dockerfile  Pipfile  main.py  pyproject.toml  requirements.txt  serve_config.yml
backend/app/: app_fastapi.py  settings.py
backend/app/agents/scrapegraph_agent/: prompts.py  schemas.py  scrapegraph_agent.py
backend/app/api/: scrape.py  scrapers.py
backend/app/core/: config.py  db.py
backend/app/crud/: scrapers.py
backend/app/error/: error.py
backend/app/models/: models.py
backend/app/services/: scrape.py
backend/app/utils/: dates.py  general.py  shared_pools.py
backend/app/workflows/: data_extractor.py
backend/migrations/: env.py
backend/migrations/versions/: afb909a039c1_initial_configuration.py
frontend/: Dockerfile  jest.config.js  next.config.cjs  package.json  tailwind.config.ts
frontend/public/: sitemap-0.xml
frontend/src/api/: api-client.ts
frontend/src/app/: error.tsx  layout.tsx  page.tsx
frontend/src/components/scraper/: ScraperActions.tsx  ScraperContent.tsx  ScraperCreate.tsx  ScraperFilters.tsx  ScraperForm.tsx  ScraperItem.tsx  ScraperList.tsx  ScraperModal.tsx  ScraperSchedule.tsx
frontend/src/components/shared/: Button.tsx  Checkbox.tsx  DatePicker.tsx  ListInput.tsx  Modal.tsx  Select.tsx  TextArea.tsx  TextInput.tsx  Toggle.tsx  Tooltip.tsx
frontend/src/constant/: form.ts
frontend/src/hooks/: useScrapers.ts
frontend/src/lib/: schemas.ts  types.ts  utils.ts
(+1 files in other folders)
