[tool.poetry]
name = "conan"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ray = {extras = ["serve"], version = "*"}
loguru = "*"
asyncpg = "*"
sqlmodel = "*"
alembic = "*"
pytz = "*"
pydantic = "*"
pydantic-settings = "*"
langchain = "*"
feedparser = "*"
chromadb = "*"
sentence-transformers = "*"
fastapi = "*"
arxiv = "*"
pymupdf = "*"
llama-index-readers-smart-pdf-loader = "*"
llmsherpa = "*"
llama-index-readers-wikipedia = "*"
wikipedia = "1.4.0"
llama-index-readers-youtube-transcript = "*"
llama-index-readers-web = "*"
unstructured = "*"
llama-index-readers-snscrape-twitter = "*"
llama-index = "*"
tweepy = "*"
google-api-python-client = "*"
google-auth-httplib2 = "*"
google-auth-oauthlib = "*"
langchain-google-community = "*"
alembic-postgresql-enum = "^1.3.0"
nest-asyncio = "^1.6.0"


[tool.poetry.group.dev.dependencies]
black = "*"
flake8 = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
